# llm-nlp-projects

./: .pre-commit-config.yaml  README.md
LLM/01_RAG/: .gitignore  README.md  pyproject.toml  rag_document_retrieval.py  requirements.txt  sample.env
LLM/01_RAG/faiss_index/: index.faiss  index.pkl
LLM/01_RAG/questions/: Questions.csv  results - Copy.csv  results.csv
LLM/01_RAG/results/: result_20250324_1155.csv
LLM/01_RAG/src/: rag_document_retrieval.py
LLM/02_Generate_unit_test/: .gitignore  .pre-commit-config.yaml  README.md  generate_tests.py  pyproject.toml
LLM/02_Generate_unit_test/src/: factorial.py
LLM/02_Generate_unit_test/tests/: test_factorial.py  test_fizzbuzz.py
