[project]
name = "01-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.10.0",
    "langchain-community>=0.3.20",
    "langchain-openai>=0.3.9",
    "pandas>=2.2.3",
    "pypdf>=5.4.0",
    "ragas>=0.2.14",
    "rouge-score>=0.1.2",
]
